--- a/docs/design.css
+++ b/docs/design.css
@@ -32,9 +32,18 @@ nav ul {
 }
    
 .breadcrumb-txt {
-	font-size: 100%;
+	font-size: 1.5em;
 }
 
+/* hide labels when using a screen reader*/
+.sr-only {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 28em) {
   .sidenav {padding-top: 15px;}
@@ -282,7 +291,7 @@ nav ul {
 /* Darstellung der Tabellen */
 .table-format {
     text-align: center;
-    color: white;
+    color: black;
     border: 1px solid #1685DE;
 	width: 100%;
 	cellspacing: 2;
@@ -410,13 +419,13 @@ nav ul {
     font-size: 30px;
     font-weight: bold;
     margin-top: 5%;
-    color: white;
+    color: black;
     font-family: "Copperplate", Arial;
 }
 
 .description {
     margin-top: 5%;
-    color: white;
+    color: black;
     font-family:"Copperplate", Arial;
 	margin-bottom: 5%;
 }
@@ -425,7 +434,7 @@ nav ul {
 .size-input {
     cursor: pointer;
     margin-right: 4%;
-    color: white;
+    color: black;
     font-family: "Garamond", Arial;
     font-weight: 500;
     font-size: 18px;
@@ -441,7 +450,7 @@ nav ul {
 /* Darstellung der Textboxen */
 .amount-input {
     margin-right: 4%;
-    color: white;
+    color: black;
     font-family: "Garamond", Arial;
     font-weight: 500;
     font-size: 18px;
@@ -464,7 +473,7 @@ nav ul {
     box-sizing: border-box;
     background: #1685DE;
     cursor: pointer;
-    color: white;
+    color: black;
     font-size: 24px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -497,7 +506,7 @@ form {
 
 /* Darstellung der Textboxen */
 .formular-input {
-    color: white;
+    color: black;
     font-family: "Garamond", Arial;
     font-weight: 500;
     font-size: 18px;
@@ -528,7 +537,7 @@ textarea {
     background: #1685DE;
     border: 1px solid #1685DE;
     cursor: pointer;
-    color: white;
+    color: black;
     font-size: 24px;
     padding-top: 10px;
     padding-bottom: 10px;
