--- a/docs/design.css
+++ b/docs/design.css
@@ -30,9 +30,10 @@ nav ul {
     list-style-type: none;
     text-decoration: none;
 }
-   
+
 .breadcrumb-txt {
-	font-size: 1.5em;
+    font-size: 1.5em;
+    font-family: "Garamond", Arial;
 }
 
 /* hide labels when using a screen reader*/
@@ -68,15 +69,12 @@ nav ul {
 		.webshop {
 			flex-direction:column;
 		}	
+        .header-headline-txt {
+            display:none;
+        }
 }
 
-@media only screen and (max-width: 41em) {
-    .header-headline-txt {
-        display: none;
-    }
-}
-    
- 
+     
 	
 #main-navigation {
 	display:flex;
@@ -122,7 +120,7 @@ nav ul {
 
 /* Logo im Header */
 .logo-header {
-    display: block;
+    position:absolute;
     height: 90%;
     margin-left: 15%;
     -webkit-transition-duration: 0.2s;
@@ -142,7 +140,7 @@ nav ul {
     font-family: "Copperplate", Arial;
     color: white;
     text-align: center;
-    margin: auto 5% auto 0;
+    margin: auto 10% auto auto;
 }
 
 /* Header Bild für Home */
@@ -178,6 +176,7 @@ nav ul {
     display: flex;
     width: 100%;
     height: 200px;
+    justify-content:space-between;
     background-image: linear-gradient(90deg, rgba(0,0,0,0.8) 20%, rgba(255,255,255,0)), url(header_images/fixtures.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -194,11 +193,12 @@ nav ul {
     height: 200px;
     background-image: linear-gradient(90deg, rgba(0,0,0,0.8) 20%, rgba(255,255,255,0)), url(header_images/about_the_club.jpg);
     background-position: center;
+    justify-content: space-between;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     box-sizing: border-box;
-    box-shadow: 0 0 20px ;
+    box-shadow: 0 0 20px;
 }
 
 /* Header Bild für Last Results */
@@ -209,10 +209,11 @@ nav ul {
     background-image: linear-gradient(90deg, rgba(0,0,0,0.8) 20%, rgba(255,255,255,0)), url(header_images/last_results.jpg);
     background-position: center;
     background-repeat: no-repeat;
+    justify-content: space-between;
     background-size: cover;
     position: relative;
     box-sizing: border-box;
-    box-shadow: 0 0 20px ;
+    box-shadow: 0 0 20px;
 }
 
 /* Header Bild für League Table */
@@ -224,9 +225,10 @@ nav ul {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    justify-content: space-between;
     position: relative;
     box-sizing: border-box;
-    box-shadow: 0 0 20px ;
+    box-shadow: 0 0 20px;
 }
 
 /* Header Bild für Team */
@@ -238,9 +240,10 @@ nav ul {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    justify-content: space-between;
     position: relative;
     box-sizing: border-box;
-    box-shadow: 0 0 20px ;
+    box-shadow: 0 0 20px;
 }
 
 /* Button Design */
@@ -303,6 +306,7 @@ nav ul {
     min-height: calc(100vh - 5em - 6px);
     display: flex;
     flex-direction: row;
+    min-width: 270px;
 }
 
 /* Content Wrapper für Inhalt */
@@ -332,7 +336,7 @@ nav ul {
 	letter-spacing: 2px;
 	height: 35px;
     width: 150px;
-    margin: 0 25px 0 25px;
+    margin: 0 2% 0 5%;
 }
 
 /* Wenn man über Button hovert */
